// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Line Start > should correctly parse line start in the end of regexp 1`] = `
{
  "body": {
    "end": 2,
    "expressions": [
      {
        "charCode": 97,
        "end": 1,
        "kind": "Char",
        "start": 1,
        "type": "Simple",
        "value": "a",
      },
      {
        "end": 2,
        "kind": "LineStart",
        "start": 2,
      },
    ],
    "kind": "Alternative",
    "start": 1,
  },
  "end": 3,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Line Start > should correctly parse line start in the middle of regexp 1`] = `
{
  "body": {
    "end": 3,
    "expressions": [
      {
        "charCode": 97,
        "end": 1,
        "kind": "Char",
        "start": 1,
        "type": "Simple",
        "value": "a",
      },
      {
        "end": 2,
        "kind": "LineStart",
        "start": 2,
      },
      {
        "charCode": 97,
        "end": 3,
        "kind": "Char",
        "start": 3,
        "type": "Simple",
        "value": "a",
      },
    ],
    "kind": "Alternative",
    "start": 1,
  },
  "end": 4,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Line Start > should correctly parse line start in the start of regexp 1`] = `
{
  "body": {
    "end": 2,
    "expressions": [
      {
        "end": 1,
        "kind": "LineStart",
        "start": 1,
      },
      {
        "charCode": 97,
        "end": 2,
        "kind": "Char",
        "start": 2,
        "type": "Simple",
        "value": "a",
      },
    ],
    "kind": "Alternative",
    "start": 1,
  },
  "end": 3,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;
